Added label control for payment fees and buttons.

--- a/force-app/main/default/classes/SummitEventsSubmitController.cls
+++ b/force-app/main/default/classes/SummitEventsSubmitController.cls
@@ -17,10 +17,8 @@ public with sharing class SummitEventsSubmitController {
     public Boolean adminOpen { get; set; }
     public List<Summit_Events_Fee__c> eventFees { get; set; }
     public Double totalPaymentAmount { get; set; }
-    public String totalPaymentAmountFormatted { get; set; }
     public Double existingPaymentAmount { get; set; }
     public Double eventOnlyPaymentAmount { get; set; }
-    public String eventOnlyPaymentAmountFormatted { get; set; }
     public Boolean hasPaymentGateway { get; set; }
     public Boolean hasFees { get; set; }
     public Boolean hasMessages { get; set; }
@@ -36,13 +34,18 @@ public with sharing class SummitEventsSubmitController {
             eventPage = [
                     SELECT Event_Name__c, Event_Submit_Title__c, Event_Submit_Description__c, Event_Footer__c, Template__c, Event_Home_Link_Title__c, Event_Home_Link_URL__c,
                             Tracking_Submit_Registration__c, Event_Full_Text__c, Close_Event_Days_Before__c, Keep_Registration_Open_During_Event__c,
-                            Donation_Description__c, Display_Optional_Donation__c, Payment_Gateway__c
+                            Donation_Description__c, Display_Optional_Donation__c, Payment_Gateway__c, Event_Fee_Label__c, Event_Fee_Total_Label__c,
+                            Event_Fee_Submit_List_Label__c, Payment_Button_Label__c
                     FROM Summit_Events__c
                     WHERE Id = :eventInformation.eventId
                     WITH SECURITY_ENFORCED
             ];
 
             templateSelected = seaShared.getTemplate(eventPage.Template__c);
+
+            if (String.isNotBlank(eventPage.Payment_Gateway__c) && eventPage.Payment_Gateway__c != 'None') {
+                hasPaymentGateway = true;
+            }
 
             eventInstance = [
                     SELECT Instance_Title__c, Event__r.Event_Name__c, Instance_Time_Zone__c,
@@ -112,8 +115,6 @@ public with sharing class SummitEventsSubmitController {
                 if (existingPaymentAmount > 0) {
                     totalPaymentAmount = totalPaymentAmount - existingPaymentAmount;
                 }
-                eventOnlyPaymentAmountFormatted = prettyCurrencyString(eventOnlyPaymentAmount);
-                totalPaymentAmountFormatted = prettyCurrencyString(totalPaymentAmount);
             }
             if (totalPaymentAmount > 0) {
                 hasFees = true;
@@ -124,15 +125,6 @@ public with sharing class SummitEventsSubmitController {
             hasMessages = true;
         }
 
-    }
-
-    public String prettyCurrencyString(Decimal numberIn) {
-        String numberOut = '';
-        List<String> args = new String[]{
-                '0', 'number', '###,###,##0.00'
-        };
-        numberOut = '$' + String.format(numberIn.format(), args);
-        return numberOut;
     }
 
     public PageReference checkEventDetails() {
@@ -151,36 +143,27 @@ public with sharing class SummitEventsSubmitController {
                 if (!communityBaseURL.endsWith('/')) {
                     communityBaseURL += '/';
                 }
-                confirmPage = new PageReference(communityBaseURL + 'c__' + eventPage.Payment_Gateway__c);
+                // Check if the payment page is namespaced (in case a packaged version of a gateway ever gets made).
+                // if not apply custom namespace to get it out of summit namespace.
+                if (eventPage.Payment_Gateway__c.indexOf('__') == -1) {
+                    confirmPage = new PageReference(communityBaseURL + 'c__' + eventPage.Payment_Gateway__c);
+                } else {
+                    confirmPage = new PageReference(communityBaseURL + eventPage.Payment_Gateway__c);
+                }
+
             }
         }
 
         //Is there a payment gateway, are there fees
-        if (String.isNotBlank(eventPage.Payment_Gateway__c) && eventPage.Payment_Gateway__c != 'None') {
-            if (eventFees.size() > 0) {
-                //Get community base URL from custom settings
-                hasPaymentGateway = true;
-                Summit_Events_Settings__c myUserSetting = Summit_Events_Settings__c.getInstance(UserInfo.getUserId());
-                String communityBaseURL = myUserSetting.Community_Base_URL__c;
-                if (!communityBaseURL.endsWith('/')) {
-                    communityBaseURL += '/';
-                }
-                confirmPage = new PageReference(communityBaseURL + 'c__' + eventPage.Payment_Gateway__c);
+        if (hasPaymentGateway && eventFees.size() > 0) {
+            //Get community base URL from custom settings
+            hasPaymentGateway = true;
+            Summit_Events_Settings__c myUserSetting = Summit_Events_Settings__c.getInstance(UserInfo.getUserId());
+            String communityBaseURL = myUserSetting.Community_Base_URL__c;
+            if (!communityBaseURL.endsWith('/')) {
+                communityBaseURL += '/';
             }
-        }
-
-        //Is there a payment gateway, are there fees
-        if (String.isNotBlank(eventPage.Payment_Gateway__c) && eventPage.Payment_Gateway__c != 'None') {
-            if (eventFees.size() > 0) {
-                //Get community base URL from custom settings
-                hasPaymentGateway = true;
-                Summit_Events_Settings__c myUserSetting = Summit_Events_Settings__c.getInstance(UserInfo.getUserId());
-                String communityBaseURL = myUserSetting.Community_Base_URL__c;
-                if (!communityBaseURL.endsWith('/')) {
-                    communityBaseURL += '/';
-                }
-                confirmPage = new PageReference(communityBaseURL + 'c__' + eventPage.Payment_Gateway__c);
-            }
+            confirmPage = new PageReference(communityBaseURL + 'c__' + eventPage.Payment_Gateway__c);
         }
 
         if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
